fixed responsiveness on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300;1,400&display=swap');
+
 body {
     /* background-color: rgb(241, 241, 231); */
     background-color: rgba(250, 250, 250, 0.8);
@@ -22,6 +24,7 @@ h2 {
     font-style: bold;
     margin: 10px;
     font-family: 'Merriweather', sans-serif;
+    padding-top: 25px;
 } 
 
 p {
